# 2020

./: .gitignore  README.md
alpine/: RSS Reader.md
alpine/light-rss-reader/: app.js  index.html  sw.js
elixir/app/test/: lasagna_test.exs
english/: 002.md  talking-about-my-favorite-holiday.md
rust/app/: Cargo.toml  README.md
rust/app/src/: main.rs
typescript/: README.md  package.json  pnpm-lock.yaml
typescript/006-rna-transcription/: Instructions.md  rna-transcription.spec.ts  rna-transcription.ts
