[package]
name = "app"
version = "0.1.0"
authors = ["Dang Van Thanh <dangvanthanh@dangthanh.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = "1.0.130"
serde_json = "1.0.68"
